# job-post-topic-modelling

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
conf/: config.yaml
conf/embed/model/: GritLM.yaml  intfloat.yaml  sentence_transformers.yaml  sentence_transformers_big.yaml  sentence_transformers_small.yaml
conf/embed/settings/: default.yaml
conf/evaluate/: settings.yaml
conf/evaluate/c_TF_IDF/: c_TF_IDF.yaml
conf/evaluate/representation/: MMR.yaml
conf/evaluate/settings/: default.yaml
conf/evaluate/vectorizer/: CountVectorizer.yaml
conf/predict/: settings.yaml
conf/predict/c_TF_IDF/: c_TF_IDF.yaml
conf/predict/clustering/: HDBSCAN.yaml  KMeans.yaml
conf/predict/dimensionality_reduction/: PCA.yaml  UMAP.yaml
conf/predict/representation/: KeyBERTInspired.yaml
conf/predict/vectorizer/: CountVectorizer.yaml
conf/prepare/preprocessing/: lgmodel.yaml  simple.yaml
conf/prepare/settings/: full.yaml  full_star.yaml  large_star.yaml  small.yaml
conf/prepare/star/: local.yaml  star.yaml  star_sec.yaml
conf/train/: default.yaml
conf/train/c_TF_IDF/: c_TF_IDF_blank.yaml
conf/train/clustering/: HDBSCAN.yaml  HDBSCAN_blank.yaml  KMeans_blank.yaml
conf/train/dimensionality_reduction/: PCA_blank.yaml  UMAP.yaml  UMAP_blank.yaml  empty.yaml
conf/train/seed_topics/: blank.yaml  flexibility.yaml
conf/train/settings/: default.yaml
conf/train/vectorizer/: CountVectorizer_blank.yaml
data/: .gitignore  Jobnet.xlsx
models/bertopic_model/: .gitignore
output/: .gitignore  metrics.json
output/plots/: images.dvc
src/job_post_topic_modelling/: dvc.yaml  embed.py  evaluate.py  predict.py  prepare.py  train.py
src/job_post_topic_modelling/utils/: data_io.py  find_project_root.py  interactive.py  log_html.py
tests/: test_foo.py
